# BombermanMultiplayer

./: .clang-tidy  .gitignore  Bomberman.sln  Bomberman.vcxproj  Bomberman.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Const.h  DEVLOG.md  Doxyfile  Game.cpp  Game.h  HOW_TO_BUILD.md  README.md  main.cpp  packages.config  server_main.cpp  sonar-project.properties
.github/workflows/: build.yml  pages.yml
Configs/: DefaultLogging.ini
Docs/: ArchitectureNotes.md  FinalTestMatrix.md  PredictionContract.md
Docs/NetworkTests/Baseline_2026-03-15/: README.md  server_diag_control.txt  server_diag_delay100.txt  server_diag_delay120_jitter30_loss2.txt  server_diag_delay120_jitter40.txt  server_diag_delay200.txt
Docs/NetworkTests/TestMatrix03_26/T02/: T02_debug_clientA_diag.json  T02_debug_clientB_diag.json
Docs/NetworkTests/TestMatrix03_26/T03/: T03_debug_clientA_diag.json  T03_debug_clientB_initial_diag.json  T03_debug_clientB_reconnect_diag.json  T03_debug_server_diag.json
Docs/NetworkTests/TestMatrix03_26/T04/: T04_debug_clientA_diag.json  T04_debug_clientB_diag.json  T04_debug_server_diag.json
Docs/NetworkTests/TestMatrix03_26/T06/: T06_debug_server_diag.json
Docs/NetworkTests/TestMatrix03_26/T09/: T09_debug_clientB_diag.json
Docs/NetworkTests/TestMatrix03_26/T11/: T11_debug_clientB_diag.json
Docs/NetworkTests/TestMatrix03_26/T13/: T13_debug_server_diag.json
Docs/NetworkTests/TestMatrix03_26/T14/: T14_debug_clientA_diag.json
Docs/NetworkTests/TestMatrix03_26/T15/: T15_debug_clientD_midjoin_diag.json  T15_debug_clientD_pretest_lobby_join_diag.json  T15_debug_clientE_postmatch_lobby_rejoin_diag.json
Docs/NetworkTests/TestMatrix03_26/T16/: T16_debug_server_diag.json
Docs/NetworkTests/TestMatrix03_26/T17/: T17_debug_clientB_diag.json  T17_debug_server_diag.json
Entities/: Creature.cpp  Creature.h  Enemy.cpp  Enemy.h  Object.cpp  Object.h  Player.cpp  Player.h  Sprite.cpp  Text.cpp  Text.h
Managers/: AssetManager.cpp  AssetManager.h  SceneManager.cpp  SceneManager.h
Net/: ClientDiagnostics.cpp  ClientDiagnostics.h  ClientPrediction.cpp  ClientPrediction.h  NetClient.cpp  NetClient.h  NetCommon.h  NetDiagConfig.h  NetDiagShared.h  NetDiagnostics.cpp  NetDiagnostics.h  NetSend.h  NetTransportConfig.h  PacketDispatch.h
Net/Client/: NetClient.Connection.cpp  NetClient.Protocol.cpp  NetClient.Runtime.cpp  NetClient.cpp  NetClient.h  NetClientInternal.h
Scenes/: ConnectScene.cpp  ConnectScene.h  LevelScene.cpp  LevelScene.h  LevelSceneFactory.cpp  LevelSceneFactory.h  LobbyScene.cpp  LobbyScene.h  MenuScene.cpp  MenuScene.h  MultiplayerLevelScene.Authority.cpp  MultiplayerLevelScene.Presentation.cpp  MultiplayerLevelScene.cpp  MultiplayerLevelScene.h  MultiplayerLevelSceneInternal.h  Scene.cpp  Scene.h  SingleplayerLevelScene.cpp  SingleplayerLevelScene.h  StageScene.cpp  StageScene.h
Scenes/MultiplayerLevelScene/: MultiplayerLevelScene.Authority.cpp  MultiplayerLevelScene.Presentation.cpp  MultiplayerLevelScene.RemotePresentation.cpp  MultiplayerLevelScene.Telemetry.cpp  MultiplayerLevelScene.WorldPresentation.cpp  MultiplayerLevelScene.cpp  MultiplayerLevelScene.h  MultiplayerLevelSceneInternal.h
Server/: ServerBombs.cpp  ServerBombs.h  ServerControlHandlers.cpp  ServerEvents.cpp  ServerEvents.h  ServerFlow.cpp  ServerFlow.h  ServerFlowInternal.h  ServerHandlers.cpp  ServerHandlers.h  ServerInputHandlers.cpp  ServerLobbyFlow.cpp  ServerMatchFlow.cpp  ServerPowerups.cpp  ServerPowerups.h  ServerSession.cpp  ServerSession.h  ServerSimulation.cpp  ServerSnapshot.cpp  ServerSnapshot.h  ServerState.h
Sim/: Movement.h  PowerupConfig.h  SimConfig.h  SpawnSlots.h  TileMapGen.h
Tools/: diag_viewer.html  diag_viewer.js  diag_viewer_launcher.sh
Tools/NetworkTesting/: netem_launcher.sh
Util/: CliCommon.h  Collision.cpp  Collision.h  Log.cpp  Log.h  PlayerColors.h
_temp_docs_archive/: DEVLOG.md  HOW_TO_BUILD.md
_temp_docs_archive/Docs/: ArchitectureNotes.md  Diagnostics.md  FinalTestMatrix.md  PredictionContract.md
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T01/: T01_debug_clientA_diag.json  T01_debug_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T05/: T05_debug_clientA_diag.json  T05_debug_clientB_diag.json  T05_debug_clientC_diag.json  T05_debug_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T07/: T07_debug_clientA_diag.json  T07_debug_clientB_diag.json  T07_debug_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T08/: T08_debug_clientA_diag.json  T08_debug_clientB_diag.json  T08_debug_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T09/: T09_debug_clientA_diag.json  T09_debug_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T11/: T11_debug_clientA_diag.json  T11_debug_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T12/: T12_release_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T13/: T13_debug_clientA_diag.json  T13_debug_clientB_diag.json  T13_debug_clientC_diag.json  T13_debug_clientD_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T14/: T14_debug_clientC_diag.json  T14_debug_clientD_diag.json  T14_debug_clientE_overflow_retry_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T15/: T15_debug_clientA_diag.json  T15_debug_clientB_diag.json  T15_debug_clientC_diag.json  T15_debug_clientE_reclaim_diag.json  T15_debug_server_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T16/: T16_debug_clientA_diag.json  T16_debug_clientB_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T17/: T17_debug_clientA_diag.json
_temp_docs_archive/Docs/NetworkTests/TestMatrix03_26/T20-A1/: local_client_diag.json
cmake/toolchains/: mingw64.cmake
docs/: architecture.md  decisions-and-development.md  devlog-summary.md  diagnostics.md  multiplayer-level-scene.md  net-client.md  networking.md  project-notes.md  reference.md  server.md  testing.md  topic-groups.h
docs/theme/: custom.css  footer.html  header.html  image-modal.js
(+34 files in other folders)
